<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff" >

        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dip"
                android:src="@drawable/fanikiwa_logo" />
 

            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Header Ends -->


        <!-- Make Offer Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Description Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/offer_description"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/offer_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:textColor="#372c24" />

            <!-- Amount Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/offer_amount"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/offer_Amount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="number"
                android:textColor="#372c24" />

            <!-- Interest Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/offer_Interest"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/offer_Interest"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="number"
                android:textColor="#372c24" />

            <!-- Term Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/offer_Term"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/offer_Term"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="number"
                android:textColor="#372c24" />

            <!-- PublicOffer Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/offer_PublicOffer"
                android:textColor="#372c24" />

            <Spinner
                android:id="@+id/offer_PublicOffer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:textColor="#372c24" />

            <!-- OfferType Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/offer_OfferType"
                android:textColor="#372c24" />

            <Spinner
                android:id="@+id/offer_OfferType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:textColor="#372c24" />

            <!-- partialPay Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/offer_partialPay"
                android:textColor="#372c24" />

            <CheckBox
                android:id="@+id/offer_partialPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offer_partialPay" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <!-- Create button Start -->

                <Button
                    android:id="@+id/btnMakeOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/btnMakeOffer" />
                <!-- Create button Ends -->


                <!-- Cancel button Start -->

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/btnCancel" />
                <!-- Cancel button Ends -->
                 
                <!-- Close button Start -->

                <Button
                    android:id="@+id/btnClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/btnClose" />
                <!-- Close button Ends -->
                
            </LinearLayout>
        </LinearLayout>
        <!-- Registration Form Ends -->


        <!-- Footer Start -->
        <!-- <LinearLayout -->
        <!-- android:id="@+id/footer" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_alignParentBottom="true" -->
        <!-- android:background="@layout/footer_repeat" -->
        <!-- android:orientation="horizontal" > -->
        <!-- </LinearLayout> -->
        <!-- Footer Ends -->

    </RelativeLayout>

</ScrollView>